<resources>
    <string name="app_name">My Application</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="faculty_contact_details">Faculty Contact Details</string>
    <string name="mess_menu">Mess Menu</string>
    <string name="fee_details">Fee Details</string>
    <string name="campus_map">Campus Map</string>
    <string name="name">Name</string>
    <string name="college_name">College Name</string>
    <string name="university_roll_number">University Roll Number</string>
    <string name="email_id">Email Id</string>
    <string name="description">description</string>
    <string name="details">Details</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log Out</string>
</resources>