<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ju_background">

    <Button
        android:id="@+id/btnContactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="70dp"
        android:text="@string/contact_us"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:minHeight="70dp"
        android:text="@string/about_us"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:minHeight="70dp"
        android:text="@string/privacy_policy"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:minHeight="70dp"
        android:text="@string/log_out"
        android:textSize="24sp" />
</LinearLayout>