<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ju_background"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnFacultyDeets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="70dp"
        android:text="@string/faculty_contact_details"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnMessMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:minHeight="70dp"
        android:text="@string/mess_menu"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnFeeDeets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:minHeight="70dp"
        android:text="@string/fee_details"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnClgMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:minHeight="70dp"
        android:text="@string/campus_map"
        android:textSize="24sp" />
</LinearLayout>